<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_opt_home"
          android:title="@string/menu_home"
          android:titleCondensed="@string/menu_home" 
          android:icon="@drawable/ic_home"
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/menu_opt_channels"
          android:title="@string/menu_channels"
          android:titleCondensed="@string/menu_channels"
          android:icon="@drawable/ic_selectnew"
          android:showAsAction="ifRoom">
    	<menu/>
    </item>
    <item android:id="@+id/menu_opt_preferences"
          android:title="@string/menu_preferences"
          android:titleCondensed="@string/menu_preferences" 
          android:icon="@drawable/ic_preferences"
          android:showAsAction="never"/>
    <item android:id="@+id/menu_opt_about"
          android:title="@string/menu_about"
          android:titleCondensed="@string/menu_about"
          android:icon="@drawable/ic_info"
          android:showAsAction="never"/>      
</menu>
